--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         </div>
       </section>
       <!-- ====== Features ========= -->
-      <section class="features section-padding">
+      <section class="features-section section-padding">
         <div class="container">
-          <h2 class="features-title">Features</h2>
+          <h2 class="visually-hidden features-title">Features</h2>
           <ul class="features-list">
             <li class="features-item">
               <h3 class="features-item-title">Strategy</h3>
@@ -168,7 +168,7 @@
                 width="360"
                 height="300"
               />
-              <div class="our-portfolio-desc-card">
+              <div class="our-portfolio-desc-card our-portfolio-container">
                 <h3 class="our-portfolio-name">Banking App</h3>
                 <p class="our-portfolio-desc">App</p>
               </div>
@@ -180,7 +180,7 @@
                 width="360"
                 height="300"
               />
-              <div class="our-portfolio-desc-card">
+              <div class="our-portfolio-desc-card our-portfolio-container">
                 <h3 class="our-portfolio-name">Cashless Payment</h3>
                 <p class="our-portfolio-desc">Marketing</p>
               </div>
@@ -192,7 +192,7 @@
                 width="360"
                 height="300"
               />
-              <div class="our-portfolio-desc-card">
+              <div class="our-portfolio-desc-card our-portfolio-container">
                 <h3 class="our-portfolio-name">Meditation App</h3>
                 <p class="our-portfolio-desc">App</p>
               </div>
@@ -204,7 +204,7 @@
                 width="360"
                 height="300"
               />
-              <div class="our-portfolio-desc-card">
+              <div class="our-portfolio-desc-card our-portfolio-container">
                 <h3 class="our-portfolio-name">Taxi Service</h3>
                 <p class="our-portfolio-desc">Marketing</p>
               </div>
@@ -216,7 +216,7 @@
                 width="360"
                 height="300"
               />
-              <div class="our-portfolio-desc-card">
+              <div class="our-portfolio-desc-card our-portfolio-container">
                 <h3 class="our-portfolio-name">Screen Illustrations</h3>
                 <p class="our-portfolio-desc">Design</p>
               </div>
@@ -228,7 +228,7 @@
                 width="360"
                 height="300"
               />
-              <div class="our-portfolio-desc-card">
+              <div class="our-portfolio-desc-card our-portfolio-container">
                 <h3 class="our-portfolio-name">Online Courses</h3>
                 <p class="our-portfolio-desc">Marketing</p>
               </div>
