--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     </main>
     <!-- ===== Footer ======= -->
     <footer class="footer-section">
-      <div class="container footer-container">
+      <div class="container">
         <a class="logo-footer" href="./index.html"
           >Web<span class="logo-footer-part">Studio</span></a
         >
