--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           >
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link" href="./index.html">Studio</a>
+              <a class="navigation-link current" href="./index.html">Studio</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="">Portfolio</a>
@@ -66,6 +66,11 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-item">
+              <div class="features-icon-wrapper">
+                <svg class="features-icon" width="64px" height="64px">
+                  <use href="/images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-item-title">Strategy</h3>
               <p class="features-item-description">
                 Our goal is to identify the business problem to walk away with
@@ -73,6 +78,12 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-wrapper">
+                <svg class="features-icon" width="64px" height="64px">
+                  <use href="/images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
+
               <h3 class="features-item-title">Punctuality</h3>
               <p class="features-item-description">
                 Bring the key message to the brand's audience for the best price
@@ -80,6 +91,12 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-wrapper">
+                <svg class="features-icon" width="64px" height="64px">
+                  <use href="/images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
+
               <h3 class="features-item-title">Diligence</h3>
               <p class="features-item-description">
                 Research and confirm brands that present the strongest digital
@@ -87,6 +104,12 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-wrapper">
+                <svg class="features-icon" width="64px" height="64px">
+                  <use href="/images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+
               <h3 class="features-item-title">Technologies</h3>
               <p class="features-item-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -112,6 +135,33 @@
               <div class="our-team-desc-card">
                 <h3 class="our-team-name">Mark Guerrero</h3>
                 <p class="our-team-job">Product Designer</p>
+                <ul class="social-link-list">
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-item">
@@ -125,6 +175,33 @@
               <div class="our-team-desc-card">
                 <h3 class="our-team-name">Tom Ford</h3>
                 <p class="our-team-job">Frontend Developer</p>
+                <ul class="social-link-list">
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-item">
@@ -138,6 +215,33 @@
               <div class="our-team-desc-card">
                 <h3 class="our-team-name">Camila Garcia</h3>
                 <p class="our-team-job">Marketing</p>
+                <ul class="social-link-list">
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-item">
@@ -151,6 +255,33 @@
               <div class="our-team-desc-card">
                 <h3 class="our-team-name">Daniel Wilson</h3>
                 <p class="our-team-job">UI Designer</p>
+                <ul class="social-link-list">
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-link-item">
+                    <a href="" class="social-link">
+                      <svg class="social-link-icon" width="16px" height="16px">
+                        <use href="/images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -169,7 +300,15 @@
                 height="300"
               />
               <div class="our-portfolio-desc-card our-portfolio-container">
+                <div class="our-portfolio-overlay">
+                  14 Stylish and Us14 Stylish and User-Friendly App Design
+                  Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage Apper-Friendly App Design
+                  Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </div>
                 <h3 class="our-portfolio-name">Banking App</h3>
+
                 <p class="our-portfolio-desc">App</p>
               </div>
             </li>
@@ -181,6 +320,13 @@
                 height="300"
               />
               <div class="our-portfolio-desc-card our-portfolio-container">
+                <div class="our-portfolio-overlay">
+                  14 Stylish and Us14 Stylish and User-Friendly App Design
+                  Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage Apper-Friendly App Design
+                  Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </div>
                 <h3 class="our-portfolio-name">Cashless Payment</h3>
                 <p class="our-portfolio-desc">Marketing</p>
               </div>
@@ -193,6 +339,13 @@
                 height="300"
               />
               <div class="our-portfolio-desc-card our-portfolio-container">
+                <div class="our-portfolio-overlay">
+                  14 Stylish and Us14 Stylish and User-Friendly App Design
+                  Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage Apper-Friendly App Design
+                  Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </div>
                 <h3 class="our-portfolio-name">Meditation App</h3>
                 <p class="our-portfolio-desc">App</p>
               </div>
@@ -205,6 +358,13 @@
                 height="300"
               />
               <div class="our-portfolio-desc-card our-portfolio-container">
+                <div class="our-portfolio-overlay">
+                  14 Stylish and Us14 Stylish and User-Friendly App Design
+                  Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage Apper-Friendly App Design
+                  Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </div>
                 <h3 class="our-portfolio-name">Taxi Service</h3>
                 <p class="our-portfolio-desc">Marketing</p>
               </div>
@@ -217,6 +377,13 @@
                 height="300"
               />
               <div class="our-portfolio-desc-card our-portfolio-container">
+                <div class="our-portfolio-overlay">
+                  14 Stylish and Us14 Stylish and User-Friendly App Design
+                  Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage Apper-Friendly App Design
+                  Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </div>
                 <h3 class="our-portfolio-name">Screen Illustrations</h3>
                 <p class="our-portfolio-desc">Design</p>
               </div>
@@ -229,6 +396,13 @@
                 height="300"
               />
               <div class="our-portfolio-desc-card our-portfolio-container">
+                <div class="our-portfolio-overlay">
+                  14 Stylish and Us14 Stylish and User-Friendly App Design
+                  Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage Apper-Friendly App Design
+                  Concepts · Task Manager App · Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App
+                </div>
                 <h3 class="our-portfolio-name">Online Courses</h3>
                 <p class="our-portfolio-desc">Marketing</p>
               </div>
@@ -239,14 +413,45 @@
     </main>
     <!-- ===== Footer ======= -->
     <footer class="footer-section">
-      <div class="container">
-        <a class="logo-footer" href="./index.html"
-          >Web<span class="logo-footer-part">Studio</span></a
-        >
-        <p class="footer-desc">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-desc-section">
+          <a class="logo-footer" href="./index.html"
+            >Web<span class="logo-footer-part">Studio</span></a
+          >
+          <p class="footer-desc">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-media">
+          <h3 class="footer-social-media-title">Social media</h3>
+          <ul class="social-media-list">
+            <li class="social-media-item">
+              <a href="" class="social-media-link">
+                <svg class="social-media-icon" width="24px" height="24px">
+                  <use href="/images/icons.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li class="social-media-item">
+              <a href="" class="social-media-link"
+                ><svg class="social-media-icon" width="16px" height="16px">
+                  <use href="/images/icons.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="social-media-item">
+              <a href="" class="social-media-link"
+                ><svg class="social-media-icon" width="16px" height="16px">
+                  <use href="/images/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="social-media-item">
+              <a href="" class="social-media-link"
+                ><svg class="social-media-icon" width="16px" height="16px">
+                  <use href="/images/icons.svg#icon-linkedin"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
