--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li class="features-item">
               <div class="features-icon-wrapper">
                 <svg class="features-icon" width="64px" height="64px">
-                  <use href="/images/icons.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-item-title">Strategy</h3>
@@ -80,7 +80,7 @@
             <li class="features-item">
               <div class="features-icon-wrapper">
                 <svg class="features-icon" width="64px" height="64px">
-                  <use href="/images/icons.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
 
@@ -93,7 +93,7 @@
             <li class="features-item">
               <div class="features-icon-wrapper">
                 <svg class="features-icon" width="64px" height="64px">
-                  <use href="/images/icons.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
 
@@ -106,7 +106,7 @@
             <li class="features-item">
               <div class="features-icon-wrapper">
                 <svg class="features-icon" width="64px" height="64px">
-                  <use href="/images/icons.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
 
@@ -139,26 +139,26 @@
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-twitter"></use></svg
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-facebook"></use></svg
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-linkedin"></use></svg
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
                 </ul>
@@ -179,26 +179,26 @@
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-twitter"></use></svg
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-facebook"></use></svg
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-linkedin"></use></svg
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
                 </ul>
@@ -219,26 +219,26 @@
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-twitter"></use></svg
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-facebook"></use></svg
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-linkedin"></use></svg
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
                 </ul>
@@ -259,26 +259,26 @@
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-twitter"></use></svg
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-facebook"></use></svg
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
                       <svg class="social-link-icon" width="16px" height="16px">
-                        <use href="/images/icons.svg#icon-linkedin"></use></svg
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
                 </ul>
@@ -429,25 +429,25 @@
             <li class="social-media-item">
               <a href="" class="social-media-link">
                 <svg class="social-media-icon" width="24px" height="24px">
-                  <use href="/images/icons.svg#icon-instagram"></use></svg
+                  <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="social-media-item">
               <a href="" class="social-media-link"
                 ><svg class="social-media-icon" width="16px" height="16px">
-                  <use href="/images/icons.svg#icon-twitter"></use></svg
+                  <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="social-media-item">
               <a href="" class="social-media-link"
                 ><svg class="social-media-icon" width="16px" height="16px">
-                  <use href="/images/icons.svg#icon-facebook"></use></svg
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="social-media-item">
               <a href="" class="social-media-link"
                 ><svg class="social-media-icon" width="16px" height="16px">
-                  <use href="/images/icons.svg#icon-linkedin"></use></svg
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
           </ul>
