--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <ul class="features-list">
             <li class="features-item">
               <div class="features-icon-wrapper">
-                <svg class="features-icon" width="64px" height="64px">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -79,7 +79,7 @@
             </li>
             <li class="features-item">
               <div class="features-icon-wrapper">
-                <svg class="features-icon" width="64px" height="64px">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -92,7 +92,7 @@
             </li>
             <li class="features-item">
               <div class="features-icon-wrapper">
-                <svg class="features-icon" width="64px" height="64px">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -105,7 +105,7 @@
             </li>
             <li class="features-item">
               <div class="features-icon-wrapper">
-                <svg class="features-icon" width="64px" height="64px">
+                <svg class="features-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -138,26 +138,26 @@
                 <ul class="social-link-list">
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -178,26 +178,26 @@
                 <ul class="social-link-list">
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -218,26 +218,26 @@
                 <ul class="social-link-list">
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -258,26 +258,26 @@
                 <ul class="social-link-list">
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
                   <li class="social-link-item">
                     <a href="" class="social-link">
-                      <svg class="social-link-icon" width="16px" height="16px">
+                      <svg class="social-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -293,116 +293,129 @@
           <h2 class="our-portfolio-title">Our Portfolio</h2>
           <ul class="our-portfolio-list">
             <li class="our-portfolio-item">
-              <img
-                src="./images/our-portfolio/banking-app.jpg"
-                alt="Screen Banking App"
-                width="360"
-                height="300"
-              />
-              <div class="our-portfolio-desc-card our-portfolio-container">
-                <div class="our-portfolio-overlay">
+              <div class="our-portfolio-image">
+                <img
+                  src="./images/our-portfolio/banking-app.jpg"
+                  alt="Screen Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="our-portfolio-overlay">
                   14 Stylish and Us14 Stylish and User-Friendly App Design
                   Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage Apper-Friendly App Design
                   Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
-                </div>
+                </p>
+              </div>
+              <div class="our-portfolio-desc-card our-portfolio-container">
                 <h3 class="our-portfolio-name">Banking App</h3>
 
                 <p class="our-portfolio-desc">App</p>
               </div>
             </li>
             <li class="our-portfolio-item">
-              <img
-                src="./images/our-portfolio/cashless-payment.jpg"
-                alt="Phone with QR Code"
-                width="360"
-                height="300"
-              />
-              <div class="our-portfolio-desc-card our-portfolio-container">
-                <div class="our-portfolio-overlay">
+              <div class="our-portfolio-image">
+                <img
+                  src="./images/our-portfolio/cashless-payment.jpg"
+                  alt="Phone with QR Code"
+                  width="360"
+                  height="300"
+                />
+                <p class="our-portfolio-overlay">
                   14 Stylish and Us14 Stylish and User-Friendly App Design
                   Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage Apper-Friendly App Design
                   Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
-                </div>
+                </p>
+              </div>
+              <div class="our-portfolio-desc-card our-portfolio-container">
                 <h3 class="our-portfolio-name">Cashless Payment</h3>
                 <p class="our-portfolio-desc">Marketing</p>
               </div>
             </li>
             <li class="our-portfolio-item">
-              <img
-                src="./images/our-portfolio/screen-illustrations.jpg"
-                alt="Screen Meditation App"
-                width="360"
-                height="300"
-              />
-              <div class="our-portfolio-desc-card our-portfolio-container">
-                <div class="our-portfolio-overlay">
+              <div class="our-portfolio-image">
+                <img
+                  src="./images/our-portfolio/screen-illustrations.jpg"
+                  alt="Screen Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="our-portfolio-overlay">
                   14 Stylish and Us14 Stylish and User-Friendly App Design
                   Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage Apper-Friendly App Design
                   Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
-                </div>
+                </p>
+              </div>
+              <div class="our-portfolio-desc-card our-portfolio-container">
                 <h3 class="our-portfolio-name">Meditation App</h3>
                 <p class="our-portfolio-desc">App</p>
               </div>
             </li>
             <li class="our-portfolio-item">
-              <img
-                src="./images/our-portfolio/taxi-service.jpg"
-                alt="Driver's hands behind the wheel"
-                width="360"
-                height="300"
-              />
-              <div class="our-portfolio-desc-card our-portfolio-container">
-                <div class="our-portfolio-overlay">
+              <div class="our-portfolio-image">
+                <img
+                  src="./images/our-portfolio/taxi-service.jpg"
+                  alt="Driver's hands behind the wheel"
+                  width="360"
+                  height="300"
+                />
+                <p class="our-portfolio-overlay">
                   14 Stylish and Us14 Stylish and User-Friendly App Design
                   Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage Apper-Friendly App Design
                   Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
-                </div>
+                </p>
+              </div>
+              <div class="our-portfolio-desc-card our-portfolio-container">
                 <h3 class="our-portfolio-name">Taxi Service</h3>
                 <p class="our-portfolio-desc">Marketing</p>
               </div>
             </li>
             <li class="our-portfolio-item">
-              <img
-                src="./images/our-portfolio/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <div class="our-portfolio-desc-card our-portfolio-container">
-                <div class="our-portfolio-overlay">
+              <div class="our-portfolio-image">
+                <img
+                  src="./images/our-portfolio/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+
+                <p class="our-portfolio-overlay">
                   14 Stylish and Us14 Stylish and User-Friendly App Design
                   Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage Apper-Friendly App Design
                   Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
-                </div>
+                </p>
+              </div>
+              <div class="our-portfolio-desc-card our-portfolio-container">
                 <h3 class="our-portfolio-name">Screen Illustrations</h3>
                 <p class="our-portfolio-desc">Design</p>
               </div>
             </li>
             <li class="our-portfolio-item">
-              <img
-                src="./images/our-portfolio/online-courses.jpg"
-                alt="Grl with phone"
-                width="360"
-                height="300"
-              />
-              <div class="our-portfolio-desc-card our-portfolio-container">
-                <div class="our-portfolio-overlay">
+              <div class="our-portfolio-image">
+                <img
+                  src="./images/our-portfolio/online-courses.jpg"
+                  alt="Grl with phone"
+                  width="360"
+                  height="300"
+                />
+                <p class="our-portfolio-overlay">
                   14 Stylish and Us14 Stylish and User-Friendly App Design
                   Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage Apper-Friendly App Design
                   Concepts · Task Manager App · Calorie Tracker App · Exotic
                   Fruit Ecommerce App · Cloud Storage App
-                </div>
+                </p>
+              </div>
+              <div class="our-portfolio-desc-card our-portfolio-container">
                 <h3 class="our-portfolio-name">Online Courses</h3>
                 <p class="our-portfolio-desc">Marketing</p>
               </div>
@@ -424,29 +437,29 @@
           </p>
         </div>
         <div class="footer-social-media">
-          <h3 class="footer-social-media-title">Social media</h3>
+          <p class="footer-social-media-title">Social media</p>
           <ul class="social-media-list">
             <li class="social-media-item">
               <a href="" class="social-media-link">
-                <svg class="social-media-icon" width="24px" height="24px">
+                <svg class="social-media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="social-media-item">
               <a href="" class="social-media-link"
-                ><svg class="social-media-icon" width="16px" height="16px">
+                ><svg class="social-media-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="social-media-item">
               <a href="" class="social-media-link"
-                ><svg class="social-media-icon" width="16px" height="16px">
+                ><svg class="social-media-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="social-media-item">
               <a href="" class="social-media-link"
-                ><svg class="social-media-icon" width="16px" height="16px">
+                ><svg class="social-media-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
