--- a/index.html
+++ b/index.html
@@ -465,6 +465,11 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <p class="footer-social-media-title">Subscribe</p>
+          <input type="text" name="" id="" />
+          <button type="submit" class="btn-subscribe">Subscribe</button>
+        </div>
       </div>
     </footer>
   </body>
