--- a/index.html
+++ b/index.html
@@ -467,20 +467,21 @@
         </div>
         <div class="subscribe">
           <p class="footer-social-media-title">Subscribe</p>
-        <div class="footer-subscribe-wrapper">
-          <input type="email" name="footer-input-email" id="footer-input-email" class="footer-input" placeholder="Email" />
+        <form class="footer-subscribe-wrapper">
+          <label for="footer-input-email" class="footer-subscribe-label"></label>
+          <input type="email" name="footer-input-email" id="footer-input-email" class="footer-input" placeholder="E-mail" />
           <button type="submit" class="btn-subscribe">Subscribe
-            <svg class="btn-subscribe-icon" width="24" height="20">
-              <use href="./images/icons.svg#icon-Frame-3" </svg>
-          </button></div>
+            <svg class="btn-subscribe-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-Frame-3"></use> </svg>
+          </button></form>
         </div>
       </div>
     </footer>
     <!-- Modal -->
     <div class="modal-overlay is-open">
       <div class="modal">
-        <button class="modal-close-btn" tepe="button">
-          <svg class="modal-close-btn-icon" width="24" height="24">
+        <button class="modal-close-btn" type="button">
+          <svg class="modal-close-btn-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black-18dp-2-1"
           </svg>
         </button>
@@ -517,7 +518,7 @@
             </div>
           <div class="modal-form-wrapper">
             <label class="modal-form-label" for="user-comment">Comment</label>
-              <textarea  class="modal-form-message"name="user-comment" 
+              <textarea  class="modal-form-message" name="user-comment" 
               id="user-comment" 
               placeholder="Text input"
               required
@@ -528,12 +529,12 @@
   
             <input class="modal-form-checkbox visually-hidden"
              type="checkbox"
-             name="privacy-policy"
+             name="user-privacy"
              value="true"
-             id="privacy-policy"
+             id="user-privacy"
              required
              >
-            <label class="modal-form-checkbox-label" for="privacy-policy"
+            <label class="modal-form-checkbox-label" for="user-privacy"
             >
           <span class="modal-form-own-checkbox"><svg class="modal-form-own-checkbox-icon" width="10" height="8">
             <use href="./images/icons.svg#icon-Vector">
@@ -541,9 +542,7 @@
         I accept the terms and conditions of the <a class="modal-form-link" href="">Privacy Policy</a>
         </label>
           </div>
-          <div class="modal-form-submit">
             <button class="modal-form-submit-btn" type="submit">Send</button>
-          </div>
         </form>
         
 
