--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-btn-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close-black-18dp-2-1"
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
         </button>
         <p class="modal-desc">Leave your contacts and we will call you back</p>
@@ -537,7 +537,7 @@
             <label class="modal-form-checkbox-label" for="user-privacy"
             >
           <span class="modal-form-own-checkbox"><svg class="modal-form-own-checkbox-icon" width="10" height="8">
-            <use href="./images/icons.svg#icon-Vector">
+            <use href="./images/icons.svg#icon-Vector"></use>
           </svg></span>
         I accept the terms and conditions of the <a class="modal-form-link" href="">Privacy Policy</a>
         </label>
