--- a/index.html
+++ b/index.html
@@ -468,12 +468,14 @@
         <div class="subscribe">
           <p class="footer-social-media-title">Subscribe</p>
         <form class="footer-subscribe-wrapper">
-          <label for="footer-input-email" class="footer-subscribe-label"></label>
+          <label for="footer-input-email" class="footer-subscribe-label">
           <input type="email" name="footer-input-email" id="footer-input-email" class="footer-input" placeholder="E-mail" />
           <button type="submit" class="btn-subscribe">Subscribe
             <svg class="btn-subscribe-icon" width="24" height="24">
               <use href="./images/icons.svg#icon-Frame-3"></use> </svg>
-          </button></form>
+          </button>
+        </label>
+        </form>
         </div>
       </div>
     </footer>
