--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
           </div>
 
         </div>
-        <div class="modal-form-wrapper">
+        <div class="modal-form-message-wrapper">
           <label class="modal-form-label" for="user-comment">Comment</label>
           <textarea class="modal-form-message" name="user-comment" id="user-comment" placeholder="Text input"
             required></textarea>
